[workspace]
members = [
	"bin/node/cli",
	"bin/node/runtime",
#	"bootnodes-router",
	"client",
	#"client/cli",
	"client/consensus/pow-sc",
#	"client/context",
#	"client/crfg",
#	"client/finality-tracker",
#	"client/rpc",
#	"client/sharding",
#	"client/util",
#	"client/util/merkle",
#	"dev",
#	"foreign/chain",
#	"foreign/network",
#	"foreign/network/vnetwork",
#	"foreign/network-libp2p",
#	"foreign/relay",
#	"frame/assets",
#	"frame/balances",
#	"frame/crfg",
#	"frame/executive",
	"frame/pow",
#	"frame/relay",
#	"frame/sharding",
#	"frame/storage",
#	"frame/tracker",
	#"primitives/core",
	"primitives/hrp",
#	"primitives/sharding",
	"primitives/srml",
#	"switch",
#	"switch/mining2",
#	"switch/rpc",
#	"switch/rpc-servers",
	#"utils/build-script-utils",
	"utils/serde-hex",
	"utils/wasm-builder"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
