[package]
name = "yee-bootnodes-router"
version = "0.1.0"
authors = ["sman <sman2013@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.8", optional = true }
# sc-service = { package = "sc-service", version = "0.8.0-alpha.5", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "master" }

[features]
default = [ "cli" ]
cli = [
    "structopt"
]
