[package]
name = "yee-bootnodes-router"
version = "0.1.0"
authors = ["sman <sman2013@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
app_dirs = "1.2"
jsonrpc-core = "10.0.1"
jsonrpc-pubsub = "10.0.1"
jsonrpc-derive = "10.0.2"
jsonrpc-core-client = "12.0.0"
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"
jsonrpc-http-server = "10.0.1"
toml = "0.4.5"
serde_derive = "1.0.32"
serde = "1.0.32"
serde_json = "1.0"
exit-future = "0.1"
futures = "0.1"
error-chain = "0.12"
yee-dev = { package = "yee-dev", path = "../dev" }

