[package]
name = "yc-client"
version = "2.0.0"
edition = "2018"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-block-builder = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-client-api = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sp-consensus = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
derive_more = { version = "0.99.2" }
sc-executor = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-externalities = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
fnv = { version = "1.0.6" }
futures = { version = "0.3.1", features = ["compat"] }
hash-db = { version = "0.15.2" }
hex-literal = { version = "0.2.1" }
sp-inherents = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-keyring = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
kvdb = "0.5.0"
log = { version = "0.4.8" }
parking_lot = "0.10.0"
rand = "0.7.3"
sp-core = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-std = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-version = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-api = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-utils = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-blockchain = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-state-machine = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-telemetry = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-trie = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-database = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
tracing = "0.1.10"

[dev-dependencies]
env_logger = "0.7.0"
tempfile = "3.1.0"
substrate-test-runtime-client = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
kvdb-memorydb = "0.5.0"
sp-panic-handler = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
