[package]
name = "yee-dev"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
error-chain = "0.12"
libp2p-core = "0.18"
sp-core = { package = "sp-core", git = "https://github.com/yeeco/substrate.git",  branch = "yee"  }
# sc-service = { package = "sc-service", default-features = false, git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-network = { package = "sc-network", default-features = false, git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
