[package]
name = "yee-switch"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc-service = { package = "sc-service", version = "0.8.0-alpha.5", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "master" }

#[features]
#default = [ "cli" ]
#cli = [
#    "structopt"
#]

