[package]
name = "yc-cli"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
description = "yc-cli"
edition = "2018"
license = "GPL-3.0"

[dependencies]
clap = "2.33.0"
derive_more = "0.99.2"
env_logger = "0.7.0"
log = "0.4.8"
atty = "0.2.13"
regex = "1.3.1"
time = "0.1.42"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
app_dirs = "1.2.1"
tokio = { version = "0.2.9", features = [ "signal", "rt-core", "rt-threaded" ] }
futures = "0.3.4"
fdlimit = "0.1.4"
serde_json = "1.0.41"
sc-informant = { package = "sc-informant", version = "0.8.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sp-panic-handler = { package = "sp-panic-handler", version = "2.0.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sc-client-api = { package = "sc-client-api", version = "2.0.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sp-blockchain = { package = "sp-blockchain", version = "2.0.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sc-network = { package = "sc-network", version = "0.8.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sp-runtime = { package = "sp-runtime", version = "2.0.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sp-utils = { package = "sp-utils", version = "2.0.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sp-core = { package = "sp-core", version = "2.0.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sc-service = { package = "sc-service", version = "0.8.0-alpha.5", default-features = false, git = "https://github.com/yeeco/substrate.git", branch = "master" }
sp-state-machine = { package = "sp-state-machine", version = "0.8.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sc-telemetry = { package = "sc-telemetry", version = "2.0.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
substrate-prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.8.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
sp-keyring = { package = "sp-keyring", version = "2.0.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
names = "0.11.0"
structopt = "0.3.8"
sc-tracing = { package = "sc-tracing", version = "2.0.0-alpha.5", git = "https://github.com/yeeco/substrate.git", branch = "master" }
chrono = "0.4.10"
parity-util-mem = { version = "0.6.0", default-features = false, features = ["primitive-types"] }
# custom command dependencies
yee-bootnodes-router = { package = "yee-bootnodes-router", path = "../../bootnodes-router"}
yee-switch = { package = "yee-switch", path = "../../switch" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
rpassword = "4.0.1"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"

[dev-dependencies]
tempfile = "3.1.0"

[features]
wasmtime = [
	"sc-service/wasmtime",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
