[package]
name = "yc-cli"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
description = "yc-cli"
edition = "2018"
license = "GPL-3.0"

[dependencies]
clap = "2.33.0"
derive_more = "0.99.2"
env_logger = "0.7.0"
log = "0.4.8"
atty = "0.2.13"
regex = "1.3.1"
time = "0.1.42"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
app_dirs = "1.2.1"
tokio = { version = "0.2.9", features = [ "signal", "rt-core", "rt-threaded" ] }
futures = "0.3.4"
fdlimit = "0.1.4"
serde_json = "1.0.41"
sc-informant = { package = "sc-informant", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-panic-handler = { package = "sp-panic-handler", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-client-api = { package = "sc-client-api", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-blockchain = { package = "sp-blockchain", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-network = { package = "sc-network", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-runtime = { package = "sp-runtime", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-utils = { package = "sp-utils", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-core = { package = "sp-core", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-service = { package = "sc-service", default-features = false, git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-state-machine = { package = "sp-state-machine", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-telemetry = { package = "sc-telemetry", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
substrate-prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-keyring = { package = "sp-keyring", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
names = "0.11.0"
structopt = "0.3.8"
sc-tracing = { package = "sc-tracing", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
chrono = "0.4.10"
parity-util-mem = { version = "0.6.0", default-features = false, features = ["primitive-types"] }
# custom command dependencies
#yee-bootnodes-router = { package = "yee-bootnodes-router", path = "../../bootnodes-router"}
#yee-switch = { package = "yee-switch", path = "../../switch" }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
rpassword = "4.0.1"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"

[dev-dependencies]
tempfile = "3.1.0"

[features]
wasmtime = [
	"sc-service/wasmtime",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
