[package]
name = "yc-pow"
version = "0.1.0"
authors = ["sman <sman2013@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc-consensus-pow = { package = "sc-consensus-pow", git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-consensus-pow = { package = "sp-consensus-pow", git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-runtime = { package = "sp-runtime", git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-core = { package = "sp-core", git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sc-client-api = { package = "sc-client-api", git = "https://github.com/yeeco/substrate.git", branch = "yee" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
log = "0.4"
sp-consensus = { package = "sp-consensus", git = "https://github.com/yeeco/substrate.git", branch = "yee" }
sp-inherents = { package = "sp-inherents", git = "https://github.com/yeeco/substrate.git", branch = "yee" }
lru-cache = "0.1"
rand = { version = "0.7", features = ["small_rng"] }
lazy_static = "1.4"
sha3 = "0.8"