[package]
name = "yee-rpc"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
error-chain = "0.12"
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
sp-core = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-rpc-api = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-rpc-server = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-network = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-consensus = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }

#substrate-service = { git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#client = { package = "substrate-client", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#network = { package = "substrate-network", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#sp_consensus = { package = "substrate-consensus-common", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
tokio = "0.1"
pubsub = { package = "jsonrpc-pubsub", version = "10.0.1" }
jsonrpc-derive = "10.0.2"
jsonrpc-core = "10.0.1"
#substrate-rpc = { package = "substrate-rpc", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0"}
#basic-authorship = { package = "substrate-basic-authorship", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#substrate-primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
serde = { version = "1.0", features = ["derive"] }
#yee-runtime = { package = "node-runtime", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
yee-consensus-pow = { package = "yc-consensus-pow", path = "../../client/consensus/pow" }
yee-consensus-pow-primitives = { package = "yee-consensus-pow-primitives", path = "../../primitives/pow" }
parking_lot = "0.7.1"
log = "0.4"
#parity-codec = "3.5"
yee-serde-hex = { package = "serde-hex", path = "../../utils/serde-hex" }
