[package]
name = "yc-service"
version = "0.4.0"
authors = ["Yeeco <admin@yeeco.io>"]
edition = "2018"
license = "GPL-3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["db"]
# The RocksDB feature activates the RocksDB database backend. If it is not activated, and you pass
# a path to a database, an error will be produced at runtime.
db = ["sc-client-db/kvdb-rocksdb", "sc-client-db/parity-db"]
wasmtime = [
	"sc-executor/wasmtime",
]

[dependencies]
derive_more = "0.99.2"
futures01 = { package = "futures", version = "0.1.29" }
futures = "0.3.4"
parking_lot = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.8"
slog = { version = "2.5.2", features = ["nested-values"] }
futures-timer = "3.0.1"
wasm-timer = "0.2"
exit-future = "0.2.0"
pin-project = "0.4.8"
serde = "1.0.101"
serde_json = "1.0.41"
sysinfo = "0.13.3"
sc-keystore = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-io = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-utils = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-blockchain = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-core = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-session = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-application-crypto = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-consensus = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-network = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-chain-spec = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-client-api = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-client = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-api = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-client-db = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.3.0" }
sc-executor = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-rpc-server = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-rpc = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-telemetry = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sc-offchain = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
parity-multiaddr = { package = "parity-multiaddr", version = "0.7.3" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/yeeco/substrate.git", version = "0.8.0-dev"}
sc-tracing = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
tracing = "0.1.10"
parity-util-mem = { version = "0.6.1", default-features = false, features = ["primitive-types"] }


[target.'cfg(any(unix, windows))'.dependencies]
netstat2 = "0.8.1"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = '0.7.8'


[dev-dependencies]
substrate-test-runtime-client = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
sp-consensus-babe = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git" }
grandpa = { version = "0.8.0-dev", package = "sc-finality-grandpa", git = "https://github.com/yeeco/substrate.git" }
grandpa-primitives = { version = "2.0.0-dev", package = "sp-finality-grandpa", git = "https://github.com/yeeco/substrate.git" }
