[package]
name = "yee-sharding"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
sc-network = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git" }
regex = "1"
log = "0.4"
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
libp2p = { version = "0.18.1", default-features = false, features = ["secio"] }
