[package]
name = "yc-sharding"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
sc-network = { git = "https://github.com/yeeco/substrate.git", branch = "yee" }
regex = "1"
log = "0.4"
sp-runtime = { git = "https://github.com/yeeco/substrate.git", branch = "yee" }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
