[package]
name = "yee-foreign-chain"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exit-future = "0.1"
log = "0.4"
tokio = "0.1.7"
lazy_static = "1.4.0"
mut_static = "5.0.0"
sharding_primitives = { package = "yee-sharding-primitives", path = "../../primitives/sharding" }
sp-inherents = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-keystore = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-network = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-client = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-rpc-api = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-service = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }

sp-srml = { package = "yee-sr-primitives", path = "../../primitives/srml" }


#rpc = { package = "substrate-rpc-servers", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#substrate-client = { git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#substrate-service = { git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
