[package]
name = "yee-foreign-network"
version = "0.4.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3.6"
log = "0.4"
parking_lot = "0.7.1"
error-chain = "0.12"
futures = "0.1.17"
linked_hash_set = "0.1.3"
sc-client = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-network = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sc-transaction-pool = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }

sc-peerset = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-core = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-consensus = { version = "0.8.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-runtime = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }
sp-srml = { package = "yee-sr-primitives", path = "../../primitives/srml"}
sp-storage = { version = "2.0.0-dev", git = "https://github.com/yeeco/substrate.git",  branch = "yee" }

network-libp2p = { package = "yee-foreign-network-libp2p", path = "../network-libp2p" }
vnetwork = { package = "yee-foreign-vnetwork", path = "vnetwork" }

codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }


#primitives = { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#consensus = { package = "substrate-consensus-common", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#client = { package = "substrate-client", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#runtime_primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#substrate_service = { package = "substrate-service", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#sc_network = { package = "substrate-network", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
#substrate_transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/yeeco/substrate.git",  branch = "yee", branch = "yee-v1.0" }
tokio = "0.2"
bitflags = "1.0"
#parity-codec = { version = "3.2", features = ["derive"] }
rustc-hex = "2.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
merkle-light = { package = "merkle_light", git = "https://github.com/yeeco/merkle_light.git", branch = "yee" }
yee-merkle = { path = "../../client/util/merkle" }
ansi_term = "0.11"

[dev-dependencies]
#yee-runtime = { path = "../../runtime" }
